dist/envoy-proxy.k8s.yaml
apiVersion: v1
kind: ConfigMap
data:
  envoy.yaml: |
    static_resources:
      listeners:
      - address:
          socket_address:
            address: 0.0.0.0
            port_value: 8088
        filter_chains:
        - filters:
          - name: envoy.filters.network.http_connection_manager
            typed_config:
              "@type": type.googleapis.com/envoy.extensions.filters.network.http_connection_manager.v3.HttpConnectionManager
              codec_type: auto
              stat_prefix: ingress_http
              route_config:
                name: local_route
                virtual_hosts:
                - name: backend
                  domains:
                  - "*"
                  routes:
                  - match:
                      prefix: "/front-end-service/"
                    route:
                      prefix_rewrite: "/"
                      weighted_clusters:
                        clusters:
                        - name: front-end-service-v1-deployment
                          weight: 75
                        - name: front-end-service-v2-deployment
                          weight: 25
                  - match:
                      prefix: "/front-end-service"
                    route:
                      prefix_rewrite: "/"
                      weighted_clusters:
                        clusters:
                        - name: front-end-service-v1-deployment
                          weight: 75
                        - name: front-end-service-v2-deployment
                          weight: 25
                  - match:
                      prefix: "/back-end-service/"
                    route:
                      prefix_rewrite: "/"
                      cluster: back-end-service-deployment
                  - match:
                      prefix: "/back-end-service"
                    route:
                      prefix_rewrite: "/"
                      cluster: back-end-service-deployment
              http_filters:
              - name: envoy.filters.http.router
                typed_config: {}
      clusters:
      - name: front-end-service-v1-deployment
        connect_timeout: 1s
        type: strict_dns
        lb_policy: round_robin
        load_assignment:
          cluster_name: front-end-service-v1-deployment
          endpoints:
          - lb_endpoints:
            - endpoint:
                address:
                  socket_address:
                    address: front-end-v1
                    port_value: 8080
      - name: front-end-service-v2-deployment
        connect_timeout: 1s
        type: strict_dns
        lb_policy: round_robin
        load_assignment:
          cluster_name: front-end-service-v2-deployment
          endpoints:
          - lb_endpoints:
            - endpoint:
                address:
                  socket_address:
                    address: front-end-v2
                    port_value: 8080
      - name: back-end-service-deployment
        connect_timeout: 1s
        type: strict_dns
        lb_policy: round_robin
        load_assignment:
          cluster_name: back-end-service-deployment
          endpoints:
          - lb_endpoints:
            - endpoint:
                address:
                  socket_address:
                    address: back-end
                    port_value: 8080
    admin:
      access_log_path: "/dev/null"
      address:
        socket_address:
          address: 0.0.0.0
          port_value: 8001
metadata:
  labels:
    app: envoy-proxy
  name: envoy-proxy
  namespace: webservices
---
apiVersion: v1
kind: Service
metadata:
  labels:
    app: envoy-proxy
  name: envoy-proxy
  namespace: webservices
spec:
  ports:
    - port: 8088
      targetPort: 8088
  selector:
    app: envoy-proxy
  type: ClusterIP
---
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: envoy-proxy
  name: envoy-proxy
  namespace: webservices
spec:
  replicas: 1
  selector:
    matchLabels:
      app: envoy-proxy
  template:
    metadata:
      labels:
        app: envoy-proxy
      name: envoy-proxy
      namespace: webservices
    spec:
      containers:
        - env: []
          image: envoyproxy/envoy:v1.20.0
          name: envoy-proxy
          ports:
            - containerPort: 8088
          volumeMounts:
            - mountPath: /etc/envoy/envoy.yaml
              name: envoy-proxy-config
              subPath: envoy.yaml
      volumes:
        - configMap:
            name: envoy-proxy
          name: envoy-proxy-config
